# agentpy

./: .gitignore  Pipfile  README.org  agent.py  example.env  pyproject.toml  requirements.txt  service.py  test_service.py
.streamlit/: config.toml
agent/: __init__.py  search.py
