[tool.poetry]
name = "agentpy"
version = "0.1.0"
description = ""
authors = ["whodevil <whodevil@offthecob.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tiktoken = "^0.5.1"
bs4 = "^0.0.1"
langchain = "^0.0.306"
pydantic = "^2.4.2"
fastapi = {extras = ["all"], version = "^0.103.2"}
openai = "^0.28.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
streamlit = "^1.27.1"
uvicorn = "^0.23.2"
streamlit-authenticator = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
